--- a/mediaserver/package.json
+++ b/mediaserver/package.json
@@ -13,7 +13,6 @@
     "medooze-media-server": "^0.31.3",
     "semantic-sdp": "^3.6.0",
     "transaction-manager": "^2.1.0",
-    "websocket": "^1.0.26",
-    "ws": "^5.1.1"
+    "websocket": "^1.0.26"
   }
 }
